; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_main.c_ixgbe_vlan_rx_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_main.c_ixgbe_vlan_rx_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.vlan_group = type { i32 }
%struct.ixgbe_adapter = type { i32, %struct.vlan_group* }

@__IXGBE_DOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.vlan_group*)* @ixgbe_vlan_rx_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ixgbe_vlan_rx_register(%struct.net_device* %0, %struct.vlan_group* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.vlan_group*, align 8
  %5 = alloca %struct.ixgbe_adapter*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.vlan_group* %1, %struct.vlan_group** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.ixgbe_adapter* @netdev_priv(%struct.net_device* %6)
  store %struct.ixgbe_adapter* %7, %struct.ixgbe_adapter** %5, align 8
  %8 = load i32, i32* @__IXGBE_DOWN, align 4
  %9 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %10 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %9, i32 0, i32 0
  %11 = call i32 @test_bit(i32 %8, i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %15 = call i32 @ixgbe_irq_disable(%struct.ixgbe_adapter* %14)
  br label %16

16:                                               ; preds = %13, %2
  %17 = load %struct.vlan_group*, %struct.vlan_group** %4, align 8
  %18 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %19 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %18, i32 0, i32 1
  store %struct.vlan_group* %17, %struct.vlan_group** %19, align 8
  %20 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %21 = call i32 @ixgbe_vlan_filter_enable(%struct.ixgbe_adapter* %20)
  %22 = load %struct.net_device*, %struct.net_device** %3, align 8
  %23 = call i32 @ixgbe_vlan_rx_add_vid(%struct.net_device* %22, i32 0)
  %24 = load i32, i32* @__IXGBE_DOWN, align 4
  %25 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %26 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %25, i32 0, i32 0
  %27 = call i32 @test_bit(i32 %24, i32* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %16
  %30 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %5, align 8
  %31 = call i32 @ixgbe_irq_enable(%struct.ixgbe_adapter* %30, i32 1, i32 1)
  br label %32

32:                                               ; preds = %29, %16
  ret void
}

declare dso_local %struct.ixgbe_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @test_bit(i32, i32*) #1

declare dso_local i32 @ixgbe_irq_disable(%struct.ixgbe_adapter*) #1

declare dso_local i32 @ixgbe_vlan_filter_enable(%struct.ixgbe_adapter*) #1

declare dso_local i32 @ixgbe_vlan_rx_add_vid(%struct.net_device*, i32) #1

declare dso_local i32 @ixgbe_irq_enable(%struct.ixgbe_adapter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
